--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "firebase": "^7.5.2",
     "prop-types": "^15.7.2",
+    "rc-queue-anim": "^1.8.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-jss": "^10.0.0",
